# light-control

./: Cargo.toml  Info.plist  README.md  build.rs  build.sh  com.yourname.yourapp.plist  requirements.txt
src/: lib.rs  main.rs
src/rgb_controller/: gpio.rs  mock.rs  mod.rs  mote.rs  openrgb.rs  profiles.rs
