[package]
name = "rgb-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rgbd"
path = "src/main.rs"

[[bin]]
name = "rgb-tray"
path = "src/bin/tray.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
pyo3 = { version = "0.20", features = ["auto-initialize"] }
rand = { version = "0.8", features = ["std_rng"] }
tray-icon = "0.19.2"
image = "0.24"
winit = "0.29"